feat(mws-simple): support browser

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mws-simple",
   "version": "1.0.2",
   "description": "nodejs Amazon MWS API in 100 lines of code",
-  "main": "mws-simple.js",
+  "main": "mws-simple-browser.js",
   "dependencies": {
+    "browser-request": "^0.3.3",
     "csv-parse": "^1.1.1",
     "query-string": "^4.1.0",
-    "request": "^2.72.0",
     "xml2js": "^0.4.16"
   },
   "devDependencies": {},
