--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mws-simple",
+  "name": "mws-simple-browser",
   "version": "1.0.2",
-  "description": "nodejs Amazon MWS API in 100 lines of code",
+  "description": "browser Amazon MWS API in 100 lines of code",
   "main": "mws-simple-browser.js",
   "dependencies": {
     "browser-request": "^0.3.3",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ebusinessdirect/mws-simple.git"
+    "url": "git+https://github.com/pine/mws-simple-browser.git"
   },
   "keywords": [
     "amazon",
@@ -25,9 +25,16 @@
     "marketplace"
   ],
   "author": "Roger Endo <roger.endo@e-businessdirect.com>",
+  "contributors": [
+    {
+      "name": "Pine Mizune",
+      "email": "pinemz@gmail.com",
+      "url": "https://github.com/pine"
+    }
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ebusinessdirect/mws-simple/issues"
+    "url": "https://github.com/pine/mws-simple-browser/issues"
   },
-  "homepage": "https://github.com/ebusinessdirect/mws-simple#readme"
+  "homepage": "https://github.com/pine/mws-simple-browser#readme"
 }
